2005-07-13 Magnus Hagdorn
 * glimmer_ts.f90: fixed bug where the BC of linear interpolator
   were not correctly implemented

2005-07-04 Magnus Hagdorn
 * expanded basal boundary section in numerics doc

2005-07-01 Magnus Hagdorn
 * added new figure illustrating basal BC
 * make_doc.rules: fixed bug with eps generation from fig

2005-07-01 Magnus Hagdorn
 * merged in HEAD

2005-06-24 Magnus Hagdorn
 * glide.f90: enable basal shear stress calculations
 * glide_vars.def: change unit of basal shear stress to kilopascal
 * glimmer_coordinates.f90: add function to calculate lower-left 
   node

2005-06-13 Magnus Hagdorn
 * profile.f90: new function to register new time stamps
 * glide_types.f90: make profile period a run-time parameter, add
   profile type
 * glide_setup.f90: move profile routines to glide_profile.f90, 
   load profile period from config file
 * glide_profile.f90: new module for profiling
 * Makefile.am: add glide_profile.f90 to built system
 * glide.f90: use new profiling mechanism

2005-06-08 Magnus Hagdorn
 * glide_thk.f90: fixed bug #132

2005-06-06 Magnus Hagdorn
 * glimmer_coordinates.f90: new module for handling 2d, regular 
   coordinate systems
 * Makefile.am: added glimmer_coordinates.f90 to list of glimmer srcs
 * glide_types.f90: add coord systems for ice and velo grids
 * glide.f90: setup coords for ice and velo grids
 * glimmer_log.f90: add accessor to glimmer log unit
 * ncdf_template.f90.in: add optional arguments for data module
 * generate_ncvars.py: add line break to avoid f95 line limit

2005-05-31 Magnus Hagdorn
 * glide_types.f90: initial surface temp for gthf calc is a run-time
   parameter now
 * glide_setup.f90: read surft from config file/print to log
 * glide_lithot.f90: use surft to initialise temp distrib in lithosphere

2005-05-26 Magnus Hagdorn
 * glide_types.f90: add new logical array to lithot, keeping track of
   if a cell has been covered by ice through-out model run
 * glide_lithot.f90: simplify BC